--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,9 @@
     align-items: center;
     border-bottom: 3px solid rgb(133, 175, 252);
     z-index: 99;
-
+    
+    
+    
 
 }
 header{
@@ -41,6 +43,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
     
 }
 footer {
@@ -102,7 +105,15 @@ footer  h1{
     width: 100%;
     height: 280px;
     background-color: rgb(56, 56, 56);
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    background-image: url(/img/game_ark.jpg);
+    background-size: cover;
     
+}
+#section4 h1 {
+    font-size: 150px;
 }
 
 .main_section {
@@ -130,6 +141,7 @@ footer  h1{
     text-decoration: none;
     color: rgb(158, 158, 158)
 }
+
 .navlinks {
    display: flex;
    flex-direction: column;
@@ -197,6 +209,17 @@ article section{
     margin-bottom: 10px;
 }
 
+#grid_wrapper_2{
+    display: grid;
+    grid-template-rows: 100px 1500px 500px;
+    height: 2100px;
+    width: 100%;
+    grid-template-areas: 
+    "hn"
+    "ma"
+    "fo"
+    ;
+}
 
 
 
