--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,7 @@
     border-bottom: 3px solid rgb(133, 175, 252);
     z-index: 99;
     
-    
-    
+
 
 }
 header{
@@ -63,9 +62,8 @@ footer  h1{
     width: 100%;
     height: 280px;
     background-color: rgb(56, 56, 56);
-    
-
 }
+
 .button{
     padding: 5px;
     border-radius: 5px;
@@ -108,12 +106,12 @@ footer  h1{
     text-decoration: none;
     display: flex;
     justify-content: center;
-    background-image: url(/img/game_ark.jpg);
+    background-image: url(/img/host_game_ark.jpg);
     background-size: cover;
     
 }
 #section4 h1 {
-    font-size: 150px;
+    font-size: 100px;
 }
 
 .main_section {
@@ -221,7 +219,39 @@ article section{
     ;
 }
 
+.game_preview{
+    height: 220px;
+    width: 100%;
+    border: solid rgb(133, 175, 252);
+    border-radius: 20px; 
+    background-color: rgb(158, 158, 158);
+    background-size: cover;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 45px;
+    color: white;
+    -webkit-text-stroke: 1px rgb(0, 0, 0);
+}
 
-
+#game01{
+    background-image: url(/img/host_game_ark.jpg);
+}
+#game02{
+    background-image: url(/img/host_game_minecraft.jpg);
+}
+#game03{
+    background-image: url(/img/host_teamspeak.jpg);
+}
+#game04{
+    background-image: url(/img/host_game_terraria.jpg);
+}
+#game05{
+    background-image: url(/img/host_game_dayz.jpg);
+}
+#game06{
+    background-image: url(/img/host_game_rust.jpg);
+}
 
 
