--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ footer  h1{
     border-radius: 20px;
     align-items: center;
     flex-direction: column;
+    width: 100%;
 
 }
 
@@ -151,7 +152,7 @@ footer  h1{
    background-color: rgb(32, 32, 32); 
    justify-content: space-evenly;
    align-items: center;
-   transition: 0.2s;
+   transition: 0.1s;
 }
 .navlinks li{
     list-style: none;
@@ -230,7 +231,7 @@ article section{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 45px;
+    font-size: 50px;
     color: white;
     -webkit-text-stroke: 1px rgb(0, 0, 0);
 }
@@ -253,5 +254,47 @@ article section{
 #game06{
     background-image: url(/img/host_game_rust.jpg);
 }
+.section_h1{
+    -webkit-text-stroke: 2px rgb(0, 0, 0);
+}
+
+#grid_wrapper_account{
+    display: grid;
+    grid-template-rows: 100px 600px 500px;
+    height: 1200px;
+    width: 100%;
+    grid-template-areas: 
+    "hn"
+    "ma"
+    "fo"
+    ;
+}
+
+#section_account {
+    margin-top: 10px;
+    width: 100%;
+    height: 580px;
+    display: flex;
+    justify-content: space-evenly;
+}
+#section_account h1 a{
+    text-decoration: underline;
+    color: rgb(133, 175, 252);
+}
+
+#grid_wrapper_account{
+    display: grid;
+    grid-template-rows: 100px 400px 500px;
+    min-height: 1000px;
+    width: 100%;
+    grid-template-areas: 
+    "hn"
+    "ma"
+    "fo"
+    ;
+}
+
+
+
 
 
