--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,50 @@ article section{
     ;
 }
 
+    
+    
+#footer_wrapper{
+display: grid;
+grid-template-columns: 50% 50%;
+grid-template-rows: 50px 450px;
+grid-template-areas: 
+"fh1 fh1"
+"fo1 fo2"
+;
+}
 
+#footer_1 {
+    grid-area: fo1;
+    display: flex;
+    flex-wrap: wrap;
+    
+}
 
+#footer_2{
+    grid-area: fo2;
+}
+#footer_header{
+    grid-area: fh1;
+    display: flex;
+    justify-content: center;
+    
+}
 
+.contact_icon{
+    height: 70px;
+    width: 80px;
+}
+.footer_section{
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+}
+.blue_line{
+    width: 80%;
+    height: 3px;
+    background-color: rgb(133, 175, 252);
+}
 
