fixat innehåll till support

--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,102 @@ footer h1 {
     margin-left: 5px;
     margin-right: 5px;
     margin-top: 20px;
+    margin-bottom: 20px;
+}
+.top_box {
+    width: 49%;
+    height: 300px;
+    border: solid #85affc;
+    border-radius: 10px;
+    margin: 10px;
+}
+#top_box_flex{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.bottom_box{
+    width: 99%;
+    height: 100%;
+    min-height: 300px;
+    border: solid #85affc;
+    border-radius: 10px;
+    margin: 10px;
+    background-image: url(/img/host_jungle.jpg);
+}
+#top_box1{
+    background-image: url(/img/host_ticket.jpg);
+    background-size: cover;
+}
+#top_box2{
+    background-image: url(/img/host_serverexpert_2.jpg);
+    background-size: cover;
+}
+
+.corner_button{
+    height: 50px;
+    width: 100%;
+    border: 2px solid #ffffff;
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #202020;
+    font-size: 25px;
+}
+#discord_button .corner_button{
+    width: 250px;
+}
+.bottom_box .corner_button {
+    color: #ffffff;
+    background-color: rgb(38, 38, 38);
+    border: 2px solid #383838;
+}
+.bottom_box .corner_button:hover {
+    color: rgb(38, 38, 38);
+    background-color: rgb(255, 255, 255);
+    border: 2px solid #383838;
+}
+.bottom_box a {
+    margin: 20px;
+    display: inline-block;
+}
+.bottom_box .support_undertext{
+    width: 40%;
+    color: #383838;
+}
+.bottom_box .support_title{
+    color: #383838;
+    font-size: 50px;
+}
+#bottom_box_discordlogo{
+    height: 70px;
+    width: auto;
+    display: block;
+    margin-left: 20px;
+}
+.corner_button:hover{
+    color: rgb(255, 255, 255);
+    background-color:  #202020;
+    transition: 0.3s;
+
+}
+.top_box a {
+    margin: 20px;
+    display: inline-block;
+}
+.support_title{
+    font-size: 70px;
+    color: rgb(255, 255, 255);
+    font-family: fantasy;
+    margin-left: 20px;
+}
+.support_undertext {
+    margin: 20px;
+    color: rgb(255, 255, 255);
 }
 .main_section article {
     margin-bottom: 10px;
@@ -498,4 +594,21 @@ article section {
         flex-direction: column-reverse;
         align-items:none;
     }
+}
+
+
+@media (max-width: 800px) {
+
+#top_box_flex{
+    flex-direction: column;
+    justify-content: center;
+    height: 600px;
+  }
+
+  .top_box{
+      width: 99%;
+      
+    
+
+  }
 }
