--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,19 @@ footer h1 {
 .button {
     padding: 5px;
     border-radius: 5px;
-    background-color: #fff;
-    -webkit-text-stroke: 0.5px #85affc;
+    font-size: 16px;
+    border: 2px solid #ffffff;
+    background-color: rgb(255, 255, 255);
+    color: #000000;
+    font-family: fanta;
+}
+.button:hover {
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 16px;
+    border: 2px solid #ffffff;
+    background-color: rgb(0, 0, 0);
+    color: #ffffff;
 }
 .article_section_fade {
     position: relative;
@@ -120,6 +131,9 @@ footer h1 {
     height: auto;
     align-items: center;
     flex-direction: column;
+}
+section{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 #top_section{
     display: flex;
@@ -318,6 +332,7 @@ article section {
     grid-template-areas: "hn" "ma" "fo";
 }
 .game_preview {
+    font-family: fantasy;
     height: 220px;
     width: 100%;
     border: solid #85affc;
